Build with jdk 21